// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip[Base] should render correctly  1`] = `
<div>
  <noscript />
  <button
    class="c-pqywe8 soui-button-primary cmdnit0 soui-button-button"
    type="button"
  >
    <span>
      hover me
    </span>
  </button>
</div>
`;

exports[`Tooltip[Base] should render correctly  2`] = `
<div>
  <noscript />
  <button
    class="c-pqywe8 soui-button-primary cmdnit0 soui-button-button"
    type="button"
  >
    <span>
      click me
    </span>
  </button>
</div>
`;

exports[`Tooltip[Base] should render correctly  3`] = `
<div>
  <noscript />
  <span
    class="c-95rovw soui-tooltip-target"
    style="cursor: not-allowed;"
  >
    <button
      class="c-98dy8e soui-button-secondary cmdnit0 soui-button-button c6ws1j2 soui-button-disabled"
      disabled=""
      style="pointer-events: none;"
      type="button"
    >
      <span>
        Disabled
      </span>
    </button>
  </span>
</div>
`;
